# AdaptiveOS

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README2.md  SECURITY.md  Trademark_policy.md
.github/scripts/: generate-report.py
.github/workflows/: aic-fork-workflow.yml
Protocol/: Protocol.md
Protocol/core/: Sync_manager.cpp  Sync_manager.h  encryption_layer.cpp  encryption_layer.h  handshake.cpp  handshake.h  message_broker.cpp  message_broker.h  test_protocol_core.cpp
Protocol/lua/: adaptive_policy.lua
Protocol/security/: self_defense.h  self_defense_guard.cpp
docs/: Manifesto.md
microkernel/: microkernel.md
microkernel/src/: ipc.c  ipc.h  kernel.h  memory.c  scheduler.c
modules/: CMakeLists.txt
modules/adaptive_ai/: CMakeLists.txt  config.json
modules/adaptive_ai/include/: ai_core.h
modules/adaptive_ai/src/: ai_core.cpp
modules/common/: common_context.h  common_error.h  common_event.h  common_ids.h  common_result.h  common_signal.h  common_state.h  common_time.h  common_trace.h  common_types.h  logging.h  readme.md
modules/filesystem/: CMakeLists.txt  vfs.c  vfs.h
modules/filesystem/include/: vfs.h
modules/filesystem/src/: ai_semantics.c  vfs.c
modules/networking/: netfilter.c  netfilter.h
plugin/: plugin.md
plugin/extend/: plugin_manager.c  plugin_manager.h  remote_loader.c  remote_loader.h  rollback_manager.c  rollback_manager.h  rule_engine.c  rule_engine.h  sandbox.c  sandbox.h  trust_evaluator.c  trust_evaluator.h
plugin/src/: plugin_client.c  plugin_client.h  src.md
user_space/src/: main.c  (+2 more)
(+78 files in other folders)
